navigation alignment fixed on media queries

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -70,7 +70,6 @@ header a {
 #menu {
     display: flex;
     justify-content: center;
-    align-items: center;
     gap: 4rem;
     font-size: 200%;
     list-style: none;
